crates/rune-config/tests/snapshots/composition__a_circle_between_two_groups_is_rejected_at_load_time_with_the_path.snap
---
source: crates/rune-config/tests/composition.rs
description: two groups naming each other
expression: error
---
scripts run in a circle:

  a → b → a

a script cannot be part of what has to finish before it starts.
