crates/rune-config/tests/snapshots/composition__a_circle_through_a_prerequisite_and_a_member_is_rejected.snap
---
source: crates/rune-config/tests/composition.rs
description: a circle closed through dependsOn
expression: error
---
scripts run in a circle:

  build → ci → build

a script cannot be part of what has to finish before it starts.
