crates/rune-config/tests/snapshots/composition__a_member_no_script_defines_names_the_group_the_member_and_the_closest_name.snap
---
source: crates/rune-config/tests/composition.rs
description: a group member no script defines
expression: error
---
script `ci` names `tset` as a member, which no script defines

did you mean `test`?
