crates/rune-config/tests/snapshots/composition__a_prerequisite_no_script_defines_names_the_script_that_wanted_it.snap
---
source: crates/rune-config/tests/composition.rs
description: a prerequisite no script defines
expression: error
---
script `build` depends on `clen`, which no script defines

did you mean `clean`?
