crates/rune-config/tests/snapshots/composition__depends_on_beside_serial_is_rejected.snap
---
source: crates/rune-config/tests/composition.rs
description: dependsOn on a group
expression: error
---
rune.config.ts is not a valid rune config

script `ci` sets `dependsOn` beside `serial`

a group runs the scripts it names and nothing before them. To run something first, make
it the first member of a `serial` group with this one after it.
